	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.5-trunk

 * changed librsb library detection: now it's 
   LIBS="`librsb-config  --ldflags --extra_libs` " CXXFLAGS="`librsb-config --cflags ` \
   ./configure --enable-matrices-rendering
 * scaling image code faster (thanks to __restrict__ pointers)
 * status bar will not cover image drawing space unless requested (TODO)
 * customizable SDL window caption line with _want_caption_status (TODO: r648*)
 * status bar customizable with _display_status_fmt and _info_fmt_str (TODO: r644,r651*)
 *  "%T" expando to get (and display) total memory used by the program 
 *  "%C" expando to get (and display) file/memory usage by image cache
 *  "%M" expando to get (and display) memory used by the current (displayed) image
 *  "%c" expando to get (and display) centering information
 *  "%m" expando to get (and display) current image mipmap occupation information
 * improved the 'align' command (TODO; FIXME)
 * faster display/scaling of images with mipmaps, set with _use_mipmaps
 * image cache will remember alignment within viewport (TODO)
 * viewport info cache size  (TODO)
 * mouse panning with in SDL mode (TODO: FIXME: disable this)
 * `make fim' goal eliminated
 * BMP format support is now optional (TODO: r664*)
 * PCX format support (TODO: r666*)
 * jump back and forth from the last viewed image with the ' (single quote aka apostrophe)
   key and the _lastfileindex variable (r667*)
 * added --sort and --sort-basename to sort the images list (TODO: r669*)
 * changed meaning of variable _ignorecase: now it affects autocmd's (TODO: r671*)
 * introduced variable _re_search_opts affecting regexp-based search (TODO: r671*)
 * added the 'desc "load"' command to load a textual files comments description file (TODO: 689*,790*)
 * added --load-image-descriptions-file (equivalent to descload) (TODO: r672*)
 * added --image-descriptions-file-separator (TODO: r682*)