@@ -3,6 +3,7 @@
 
                 Version 0.5-trunk
 
+ * load variables description namespace from file ("#!fim:var=value" forms)(TODO: r848)
  * changed librsb library detection: now it's 
    LIBS="`librsb-config  --ldflags --extra_libs` " CXXFLAGS="`librsb-config --cflags ` \
    ./configure --enable-matrices-rendering
